adds 007 through 011 files

--- a/007_tag-attributes/03_anchor-element/index.html
+++ b/007_tag-attributes/03_anchor-element/index.html
@@ -9,7 +9,7 @@
 <!--a{go to google}-->
 <!--a[href="http://www.google.com"]{go to google}-->
 
-<a href="http://www.google.com" target="_blankk">go to google</a>
+<a href="http://www.google.com" target="_blank">go to google</a>
 
 </body>
 </html>
